[metadata]
name = Final_Project
version = 1.0.0
author = Joseph Williams
author_email = jwilliams1333@floridapoly.edu
maintainer = Chandler Mullin
maintainer_email = cmullin1995@floridapoly.edu
maintainer = Khalee Johnson
maintainer_email = kjohnson4519@floridapoly.edu
description = Audio processing and plotting project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Rocket5081/Final_Project

[options]
packages = find:
install_requires =
    numpy
    matplotlib
    scipy
    pydub
    tkinter
